# autoware.universe

common/autoware_test_utils/include/autoware_test_utils/: mock_data_parser.hpp
common/autoware_test_utils/src/: mock_data_parser.cpp
control/autoware_autonomous_emergency_braking/src/: node.cpp
control/autoware_mpc_lateral_controller/src/vehicle_model/: vehicle_model_adt_kinematics.cpp  vehicle_model_bicycle_kinematics.cpp
launch/tier4_control_launch/launch/: control.launch.xml
planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/: CMakeLists.txt  package.xml
planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/examples/: plot_map.cpp
planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/src/: goal_planner_module.cpp  goal_searcher.cpp  manager.cpp  util.cpp
planning/behavior_path_planner/autoware_behavior_path_lane_change_module/src/: scene.cpp
planning/behavior_path_planner/autoware_behavior_path_planner/src/: planner_manager.cpp
sensing/imu_corrector/src/: imu_corrector_core.cpp
simulator/articulate_model_rear_footprint_publisher/: CMakeLists.txt  package.xml
simulator/articulate_model_rear_footprint_publisher/include/articulate_model_rear_footprint_publisher/: articulate_model_rear_footprint_publisher.hpp
simulator/articulate_model_rear_footprint_publisher/launch/: articulate_model_rear_footprint_publisher.launch
simulator/articulate_model_rear_footprint_publisher/src/: articulate_model_rear_footprint_publisher.cpp
(+209 files in other folders)
